caught a zooming error changed the gallery to two columns in web view and now it zooms and sizes correctly no more cut off edges

--- a/src/components/ui/AddToCartButton.module.css
+++ b/src/components/ui/AddToCartButton.module.css
@@ -8,7 +8,8 @@
     padding: 0.25rem 4rem;
     text-align: center;
     text-decoration: none;
-    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
     text-transform: capitalize;
 }
 
