--- a/src/components/ui/SelectCategoryModal.module.css
+++ b/src/components/ui/SelectCategoryModal.module.css
@@ -15,7 +15,7 @@
     height: 100vh;
     border-radius: 7.5px;
     background-color:rgba(253, 242, 233, 0.9);
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
     width: 100vw;
     z-index: 999;
     height: 100vh;
@@ -27,7 +27,7 @@
     padding: 1.8rem 4.4rem;
     cursor: pointer;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
-    color: #666;
+    color: var(--color-secondary-700);
     z-index: 999;
 }
 
@@ -41,8 +41,8 @@
     cursor: pointer;
     border-color: var(--color-secondary-700);
     border-radius: 7.5px;
-    border-width: 2.8px;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
+    border-width: 1px;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
     color: var(--color-secondary-700);
     display: flex;
     flex-direction: column;
@@ -58,11 +58,14 @@
 
 .container>div>ul>li.active,
 .container>div>ul>li:hover {
-    background-color: var(--color-secondary-700);
-    color: var(--color-white);
+    background-color: var(--color-white);
+    border: solid;
+    border-width: 1px;
+    border-color: var(--color-secondary-700);
+    border-radius: 7.5px;
     overflow: hidden;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
-    transition: all 750ms ease-in;
+    transition: all 300ms ease-in;
 }
 
 .hidden {
@@ -74,5 +77,9 @@
     .container {
         margin-top: -4.8rem;
         padding-bottom: 4.8rem;
+    }
+    .selected{
+        margin-top: 0.5rem;
+        padding: 0.5rem .75rem;
     }
 }
