--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,11 @@ html {
   font-size: 62.5%;
   font-weight: 400;
   line-height: 1.15;
-  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
 body {
+
   color: #777;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
